# libhpdf

./: .metadata  README.md  ffigen.yaml  pubspec.yaml  warning.txt
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/ngxtechnologies/libhpdf_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: libhpdf.podspec
lib/: generated_bindings.dart  libhpdf.dart  libhpdf_bindings_generated.dart
linux/: CMakeLists.txt
macos/: libhpdf.podspec
macos/Classes/: libhpdf.c
src/: CMakeLists.txt  libhpdf.c
windows/: CMakeLists.txt
